# android-sdk-official

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  jitpack.yml  lint.xml  protosdk-1.0.0-release.aar  protosdk-1.0.0-release.aar.sha256  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/protosdk/demo/: MainActivity.kt
app/src/main/java/com/protosdk/demo/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml
build-logic/: build.gradle.kts
build-logic/src/main/kotlin/: android-application.gradle.kts  android-library.gradle.kts
gradle/: libs.versions.toml
protosdk/: build.gradle.kts  emulator_strings.txt  gpu_strings.txt  root_strings.txt
protosdk/src/main/: AndroidManifest.xml
protosdk/src/main/cpp/: CMakeLists.txt  cpu_checker.cpp  emulator_checker.cpp  gpu_checker.cpp  root_checker.cpp
protosdk/src/main/java/com/protosdk/sdk/: ProtoSDK.kt
protosdk/src/main/java/com/protosdk/sdk/fingerprint/: CollectorInterface.kt  FingerprintData.kt  FingerprintManager.kt
protosdk/src/main/java/com/protosdk/sdk/fingerprint/collectors/: BuildInfoCollector.kt  CpuInfoCollector.kt  DebugInfoCollector.kt  DeviceInfoCollector.kt  DisplayInfoCollector.kt  EmulatorDetectionCollector.kt  GpuInfoCollector.kt  GsfIdCollector.kt  MediaDrmCollector.kt  NetworkInfoCollector.kt  RootDetectionCollector.kt  SensorInfoCollector.kt  StorageInfoCollector.kt
scripts/: build-apk.sh
(+13 files in other folders)
